--- a/android/src/main/res/layout/admin_menu_dialog.xml
+++ b/android/src/main/res/layout/admin_menu_dialog.xml
@@ -28,8 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dip"
             android:layout_weight="1"
-            android:hint="@string/word_id"
-            android:inputType="textPassword" />
+            android:hint="@string/word_id" />
     </android.support.design.widget.TextInputLayout>
 
     <Spinner
