--- a/android/src/main/res/layout/admin_menu_dialog.xml
+++ b/android/src/main/res/layout/admin_menu_dialog.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="280dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:minWidth="280dp"
     android:layout_gravity="center"
-    android:padding="30dip"
+    android:padding="16dp"
     android:background="@android:color/white">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:textStyle="bold"
         android:textColor="@android:color/holo_green_dark"
         android:text="@string/admin_panel"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/slides_id_input"
-        android:layout_width="200dip"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
         android:hint="@string/word_id"
@@ -26,43 +27,49 @@
         <EditText
             android:id="@+id/slides_id_edit_text"
             android:layout_width="match_parent"
-            android:layout_height="50dip"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="@string/word_id" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/btn_confirm_data"
-        android:layout_width="200dip"
-        android:layout_height="50dip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/confirm_changes"
-        android:textSize="18sp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:textSize="18dp"
         android:textColor="@android:color/white"
         android:layout_marginTop="20dp"
         android:background="@android:color/holo_green_light"/>
 
     <Spinner
         android:id="@+id/printer_connection_spinner"
-        android:layout_width="200dip"
-        android:layout_height="42dip"
-        android:layout_marginTop="16dip"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"/>
 
     <Button
         android:id="@+id/btn_confirm_print_type"
-        android:layout_width="200dip"
-        android:layout_height="50dip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/confirm_printing"
-        android:textSize="18sp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:textSize="18dp"
         android:textColor="@android:color/white"
         android:layout_marginTop="20dp"
         android:background="@android:color/holo_green_light"/>
 
     <Button
         android:id="@+id/btn_update_data"
-        android:layout_width="200dip"
-        android:layout_height="50dip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/update"
-        android:textSize="18sp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:textSize="18dp"
         android:textColor="@android:color/white"
         android:layout_marginTop="20dp"
         android:background="@android:color/holo_green_light"/>
